hphp/hack/test/typecheck/refinements/inter_deprecate.php.exp
File "inter_deprecate.php", line 17, characters 13-15:
The method foo is deprecated: blah (Typing[4128])
File "inter_deprecate.php", line 6, characters 19-21:
Definition is here
